--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL=https://tensoportunidades.com.br:8080
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 # NEXT_PUBLIC_API_URL=https://tensoportunidades.com.br:8080
 # NODE_ENV=production
