--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,11 @@
   "name": "newversionfrontend",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,11 +20,11 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "axios": "^1.7.9",
-    "cookies-next": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
-    "next": "14.1.0",
+    "next": "^15.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-imask": "^7.6.1",
@@ -34,6 +39,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "prettier": "^3.3.3",
